--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ DB_PASSWORD=secret
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+OPENWEARHERTOKEN=
+OPENWEARHERURL=api.openweathermap.org/data/2.5/weather
+POKEMONAPIURL=https://pokeapi.co/api/v2/type/
